@@ -7,6 +7,7 @@ make_world 128 | step_world_v1_lambda 0.1 10000 | render_world dump_step_world_v
 make_world 128 | step_world_v2_function 0.1 10000 | render_world dump_step_world_v2_function.bmp
 make_world 128 | step_world_v3_opencl 0.1 10000 | render_world dump_step_world_v3_opencl.bmp
 make_world 128 | step_world_v4_double_buffered 0.1 10000 | render_world dump_step_world_v4_double_buffered.bmp
+make_world 128 | step_world_v5_packed_properties 0.1 10000 | render_world dump_step_world_v5_packed_properties.bmp
 
 echo "step_world vs step_world_v1_lambda"
 fc dump_step_world.bmp dump_step_world_v1_lambda.bmp
@@ -16,7 +17,8 @@ echo "step_world vs step_world_v3_opencl"
 fc dump_step_world.bmp dump_step_world_v3_opencl.bmp
 echo "step_world vs step_world_v4_double_buffered"
 fc dump_step_world.bmp dump_step_world_v4_double_buffered.bmp
-echo "step_world_v3_opencl vs step_world_v4_double_buffered"
-fc dump_step_world_v3_opencl.bmp dump_step_world_v4_double_buffered.bmp
+echo "step_world vs step_world_v5_packed_properties"
+fc dump_step_world.bmp dump_step_world_v5_packed_properties.bmp
+
 
 pause
